<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_num_1"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_title"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/et_num_2"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_label"
        app:layout_constraintStart_toEndOf="@+id/add_label"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/add_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_num_1"
        app:layout_constraintStart_toEndOf="@+id/et_num_1" />


    <TextView
        android:id="@+id/label_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/equals"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_num_2"
        app:layout_constraintStart_toEndOf="@+id/et_num_2" />

    <TextView
        android:id="@+id/label_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_equal"
        app:layout_constraintStart_toEndOf="@+id/label_equal" />



    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="278dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num_2" />

    <Button
        android:id="@+id/sqr_button"
        android:layout_width="278dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sqr_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />

</androidx.constraintlayout.widget.ConstraintLayout>